# mailerlite-python

./: .coveragerc  .gitignore  README.rst  Readme.md  package.json  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: main.yml  publish.yml  release.yml
mailerlite/: __init__.py  __meta__.py  api_client.py  configuration.py
mailerlite/api/: __init__.py  campaigns_api.py  fields_api.py  forms_api.py  groups_api.py  segments_api.py  stats_api.py  subscribers_api.py
mailerlite/sdk/: __init__.py  automations.py  batch.py  campaigns.py  fields.py  forms.py  groups.py  segments.py  stats.py  subscribers.py  timezones.py  webhooks.py
tests/: api_client_test.py  automations_test.py  batches_test.py  campaigns_test.py  conftest.py  fields_test.py  forms_test.py  groups_test.py  segments_test.py  subscribers_test.py  timezones_test.py  webhooks_test.py
tests/vcr_cassettes/: automations-activity.yml  automations-get.yml  automations-list.yml  batches-request.yml  campaign-activity.yml  campaign-cancel.yml  campaign-create.yml  campaign-delete.yml  campaign-get.yml  campaign-languages.yml  campaign-list.yml  campaign-schedule.yml  campaign-update.yml  fields-create.yml  fields-delete.yml  fields-list.yml  fields-update.yml  forms-delete.yml  forms-get-subscribers.yml  forms-get.yml  forms-list.yml  forms-update.yml  groups-create.yml  groups-delete.yml  groups-get-subscribers-in-group.yml  groups-list.yml  groups-update.yml  segments-delete.yml  segments-get-subscribers.yml  segments-list.yml  segments-update.yml  subscribers-assign-subscriber-to-group.yml  (+15 more)
