[tool.poetry]
name = "mailerlite-sdk"
version = "0.1.0"
description = "The official MailerLite Python SDK"
authors = ["Igor HrÄek <igor@mailerlite.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
vcrpy = "^4.2.1"
pytest = "^7.2.0"
coverage = "^6.5.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
