[tool.poetry]
name = "mailerlite"
description = "The official MailerLite Python SDK"
authors = ["Igor Hrček <igor@mailerlite.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
python-semantic-release = "^7.32.2"

[tool.poetry.dev-dependencies]
vcrpy = "^4.2.1"
pytest = "^7.2.0"
coverage = "^6.5.0"
black = "^22.10.0"
pytest-mock = "^3.10.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "setup.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
